# AICOMM

./: .pre-commit-config.yaml  README.md  _typos.toml  ai.rest  test.rest
.github/workflows/: build.yml
chat/: Cargo.toml  README.md  deny.toml  test.rest
chat/ai_sdk/: Cargo.toml
chat/ai_sdk/examples/: ollama.rs
chat/ai_sdk/src/: lib.rs
chat/ai_sdk/src/adapters/: ollama.rs
chat/analytics-server/: Cargo.toml  analytics.yml  build.rs
chat/analytics-server/src/: config.rs  error.rs  events.rs  extractors.rs  handler.rs  lib.rs  main.rs  openapi.rs
chat/bot-server/: Cargo.toml  bot.yml
chat/bot-server/src/: config.rs  indexer.rs  lib.rs  notif.rs  server.rs
chat/chat_core/: Cargo.toml
chat/chat_core/fixtures/: decoding.pem  encoding.pem
chat/chat_core/src/: lib.rs
chat/chat_core/src/middlewares/: auth.rs  mod.rs  request_id.rs  server_time.rs
chat/chat_core/src/utils/: jwt.rs
chat/chat_server/: Cargo.toml  chat.yml
chat/chat_server/fixtures/: test.sql
chat/chat_server/sql/: init.sql
chat/chat_server/src/: agent.rs  config.rs  error.rs  lib.rs  main.rs  openapi.rs
chat/chat_server/src/handlers/: agent.rs  auth.rs  chat.rs  messages.rs  mod.rs  workspace.rs
chat/chat_server/src/middlewares/: chat.rs
chat/chat_server/src/models/: agent.rs  chat.rs  file.rs  messages.rs  mod.rs  user.rs  workspace.rs
chat/chat_test/: Cargo.toml
chat/chat_test/tests/: chat.rs
chat/migrations/: 20240610102843_initial.sql  20240626133358_triggers.sql  20241007161053_agent.sql  20241030123505_agent_adapter.sql  20241111123421_user_bot.sql
chat/notify_server/: Cargo.toml  index.html  notify.yml
chat/notify_server/src/: config.rs  error.rs  lib.rs  main.rs  notify.rs  sse.rs
chatapp/: index.html  uuid
chatapp/data/default/: analytics_events
chatapp/metadata/: default  default.sql  system  system.sql
chatapp/src/: App.vue  main.js  util.js
chatapp/src-tauri/: Cargo.toml
chatapp/src/assets/: styles.css
chatapp/src/components/: MessageList.vue  MessageSend.vue  Sidebar.vue
chatapp/src/store/: index.js
chatapp/src/views/: Chat.vue  Login.vue  Register.vue
chatapp/store/0e6/0e6931a4-9da9-43ea-9e35-af4a397d88be/: analytics_events.sql
protos/: clickhouse.sql
swiftide-pgvector/: Cargo.toml  LICENSE.md  README.md
swiftide-pgvector/examples/: indexer.rs  retrivevr.rs
swiftide-pgvector/src/: lib.rs  persist.rs  retrieve.rs
