[workspace]
members = ["chat_server", "chat_core", "notify_server", "chat_test"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.86"
axum = { version = "0.7.5", features = [
    "http2",
    "query",
    "tracing",
    "multipart",
] }
serde = { version = "1.0.203", features = ["derive"] }
serde_yaml = "0.9.34"
sqlx = { version = "0.7.4", features = [
    "chrono",
    "postgres",
    "runtime-tokio",
    "tls-rustls",
] }
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
chrono = { version = "0.4.38", features = ["serde"] }
chat-core = { path = "./chat_core" }
chat-server = { path = "./chat_server" }
notify-server = { path = "./notify_server" }
jwt-simple = "0.12.9"
tower = "0.4.13"
tower-http = { version = "0.5.2", features = [
    "compression-full",
    "trace",
    "fs",
    "cors",
] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
serde_json = "1.0.117"
