[workspace]
members = ["chat_server", "chat_core", "notify_server", "chat_test", "ai_sdk"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.89"
axum = { version = "0.7.7", features = [
    "http2",
    "query",
    "tracing",
    "multipart",
] }
serde = { version = "1.0.210", features = ["derive"] }
serde_yaml = "0.9.34"
sqlx = { version = "0.8.2", features = [
    "chrono",
    "postgres",
    "runtime-tokio",
    "tls-rustls",
] }
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
chrono = { version = "0.4.38", features = ["serde"] }
chat-core = { path = "./chat_core" }
chat-server = { path = "./chat_server" }
notify-server = { path = "./notify_server" }
jwt-simple = "0.12.10"
tower = "0.5.1"
tower-http = { version = "0.6.1", features = [
    "compression-full",
    "trace",
    "fs",
    "cors",
] }
axum-extra = { version = "0.9.4", features = ["typed-header"] }
serde_json = "1.0.128"
