[package]
name = "ai_sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
reqwest = { version = "0.12.8", default-features = false, features = ["rustls-tls", "json"] }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
