[package]
name = "analytics-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
prost = "0.13.3"
prost-types = "0.13.3"
clickhouse = { version = "0.13.1", features = ["rustls-tls", "time"] }
serde_yaml = "0.9.34"
chat-core.workspace = true
tower-http = { workspace = true, features = [
    "compression-full",
    "cors",
    "trace",
    "fs",
] }
thiserror.workspace = true
serde_json = "1.0.133"
utoipa = { version = "4.2.3", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }
utoipa-redoc = { version = "4.0.0", features = ["axum"] }
utoipa-rapidoc = { version = "4.0.0", features = ["axum"] }
async-trait = "0.1.83"
futures-util = { version = "0.3.31", default-features = false }
chrono = { workspace = true, features = ["serde"] }

[build-dependencies]
anyhow.workspace = true
prost-build = "0.13.3"
proto-builder-trait = { version = "0.6.2", features = [
    "prost",
], default-features = false }

[dev-dependencies]
clickhouse = { version = "0.13.1", features = [
    "rustls-tls",
    "time",
    "test-util",
] }
