[package]
name = "chat-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
jwt-simple = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }
uuid = { version = "1.8.0", features = ["v7", "serde"] }
axum-extra = { workspace = true }
utoipa = { version = "4.2.3", features = ["axum_extras", "chrono"] }
thiserror.workspace = true
