[package]
name = "notify-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jwt-simple = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
futures = "0.3.30"
serde = { workspace = true }
serde_yaml = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tokio-stream = { version = "0.1.15", features = ["sync"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chat-core = { workspace = true }
serde_json = { workspace = true }
dashmap = "6.0.1"
